<?xml version="1.0"?>
<package format="2">
  <name>string2marker</name>
  <version>1.0.0</version>
  <description>Simple ROS tool to get a text marker on RViz from a String ROS message</description>

  <maintainer email="rragde@upo.es">RicardoRagel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
